syntax = "proto3";

package helloworld;

import "google/api/annotations.proto";

option go_package = "github.com/satoshiyamamoto/grpc-json-transcoder-example/proto/helloworld";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/helloworld"
    };
  }
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
